@@ -1,5 +1,7 @@
 ikiwiki (2.53.4) UNRELEASED; urgency=low
 
+  * teximg: Replace the insufficient blacklist with the built-in security
+    mechanisms of TeX.
   * img: Don't generate new verison of image if it is scaled to be
     larger in either dimension. 
 
